<resources>
    <string name="app_name">ContactsP</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="exit_question">Are you sure you want to exit?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_contact__description">Contact_Description</string>
    <string name="title_activity_description__contact">Description_Contact</string>
    <string name="title_activity_create_contact">CreateContact</string>
    <string name="createname">Name</string>
    <string name="createhintexample">Type something here</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="last_name">Last Name</string>
    <string name="add">ADD</string>
    <string name="id">Id</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthday:</string>
    <string name="emailtext">Email:</string>
    <string name="addresstext">Address:</string>
    <string name="selectphotog">Select from Gallery</string>
    <string name="cancel">cancel</string>
    <string name="title_selection">Selection:</string>
    <string name="selectionmade">Image Selected</string>
    <string name="changetoselect">Pick an option</string>
    <string name="selectphoto">Take photo</string>
    <string name="nochanges">No changes</string>
    <string name="question">Really Exit?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>

</resources>
