<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateContact"
    android:background="@drawable/whatsapp_background"
    tools:showIn="@layout/activity_create_contact">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/create_imageview_descrpition"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="#00ffffff" />

        <ImageButton
            android:id="@+id/favchecker"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/create_imageview_descrpition"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_imageview_descrpition"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/createname"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_name"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/createhintexample" />

        <TextView
            android:id="@+id/text_view_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_name"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/last_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_last_name"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/createhintexample" />

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_last_name"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_email"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/createhintexample" />

        <TextView
            android:id="@+id/text_view_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_email"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/address"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_address"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/createhintexample" />
        <TextView
            android:id="@+id/text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_address"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/id"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_id"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/createhintexample" />

        <TextView
            android:id="@+id/text_view_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_id"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/phone"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_phone"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/createhintexample" />
        <Button
            android:id="@+id/btnadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_phone"
            android:layout_centerHorizontal="true"
            android:text="@string/add"
            android:background="@color/tabinferior" />

    </RelativeLayout>



</ScrollView>
