<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activities.Description_Contact"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
        <ImageButton
            android:id="@+id/btnback"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_marginLeft="8dp"
            android:background="#00ffffff"
            android:scaleType="fitCenter"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/description_image_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent" />
                    <ImageButton
                        android:id="@+id/btn_delete"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="8dp"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:src="@mipmap/ic_delete"
                        />
                </RelativeLayout>
                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/birthday"
                        />
                    <TextView
                        android:id="@+id/birthday_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:paddingLeft="15dp"
                        android:background="@color/cardview_shadow_start_color"
                        android:layout_marginLeft="3dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/addresstext"
                        />
                    <TextView
                        android:id="@+id/addresstext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:paddingLeft="15dp"
                        android:background="@color/cardview_shadow_start_color"
                        android:layout_marginLeft="3dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/emailtext"
                        />
                    <TextView
                        android:id="@+id/email_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="15dp"
                        android:textColor="@color/white"
                        android:background="@color/cardview_shadow_start_color"
                        android:layout_marginLeft="20dp"/>

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/phonerecyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin">

                </android.support.v7.widget.RecyclerView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"></LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>




</LinearLayout>